Resetting .gitignore files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Environment
 .env
+.vscode
+
+# __pycache__
+dags/__pycache__
+plugins/__pycache__
+
+# logs
+logs/dag_processor_manager
+logs/scheduler
+logs/udac_example_dag
